@@ -107,9 +107,18 @@ public class ROM
 
     // starting out with empty path list...shouldn't really be needed, but can add if needed
     // asmfile is relative to the main directory
-    public bool Patch(string asmfile)
+    public bool Patch(string asmfile, Dictionary<string, string> extraDefines)
     {
-        bool status = Asar.patch(Path.Combine(Program.MainDirectory, asmfile), ref romData, null, true, defines);
+        Dictionary<string, string> allDefines;
+
+        // this will throw an exception if there's a duplicate key
+        // shouldn't happen currently, but this may or may not be preferable to letting extraDefines override defines
+        allDefines = extraDefines == null ? defines : defines.Concat(extraDefines).ToDictionary(kvp => kvp.Key, kvp => kvp.Value);   // ew
+
+if (extraDefines != null)
+foreach (var kvp in extraDefines)
+    Console.WriteLine($"!{kvp.Key} = {kvp.Value}");
+        bool status = Asar.patch(Path.Combine(Program.MainDirectory, asmfile), ref romData, null, true, allDefines);
 
         foreach (Asarerror error in Asar.getwarnings().Concat(Asar.geterrors()))
             MessageWriter.Write(VerboseLevel.Quiet, $"  {error.Fullerrdata}");
